--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="evening">Evening</string>
     <string name="night">Night</string>
     <string name="title_activity_second_screen">SecondScreen</string>
+    <string name="title_activity_choice">ChoiceActivity</string>
 </resources>
