--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="night">Night</string>
     <string name="title_activity_second_screen">SecondScreen</string>
     <string name="title_activity_choice">ChoiceActivity</string>
+    <string name="chosen">Chosen</string>
 </resources>
